--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -12,12 +12,12 @@
     <link rel="icon" type="image/png" href="./favicon.png" >
   </head>
   <body>
-    <headder>
+    <header>
       <div>
         <span>Techium</span>
         <nav></nav>
       </div>
-    </headder>
+    </header>
     <main>
       <h1>Homepage</h1>
       <section>
