--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -15,10 +15,7 @@
     <!-- Header -->
     <header>
       <div>
-        <span><a href="/"></a></span>
-      </div>
-      <div>
-        <span>Techium</span>
+        <span><a href="/">Techium</a></span>
         <nav></nav>
       </div>
     </header>
