--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -15,7 +15,9 @@
     <!-- Header -->
     <header>
       <div>
-        <span><a href="/">Techium</a></span>
+        <div>
+          <a href="/"><span>Techium</span></a>
+        </div>
         <nav></nav>
       </div>
     </header>
