--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -180,16 +180,20 @@
           <h3>Details</h3>
           <details>
             <summary>Show/Hide me</summary>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas.
+            <p>
+              Pellentesque habitant morbi tristique senectus et netus et
+              malesuada fames ac turpis egestas.
+            </p>
           </details>
         </div>
         <div>
           <h3>Open</h3>
           <details>
             <summary>Always open</summary>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas.
+            <p>
+              Pellentesque habitant morbi tristique senectus et netus et
+              malesuada fames ac turpis egestas.
+            </p>
           </details>
         </div>
       </section>
