--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -177,7 +177,7 @@
           <h2>Details</h2>
         </header>
         <div>
-          <h3>Details</h3>
+          <h3>Default</h3>
           <details>
             <summary>Show/Hide me</summary>
             <p>
