--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -74,19 +74,19 @@
           <div>
             <article>
               <div>
-                <img src="images/pic-work-01.jpg" />
+                <img src="images/pic-work-01.jpg" alt="" />
               </div>
               <h3><a href="#">Interior Design</a></h3>
             </article>
             <article>
               <div>
-                <img src="images/pic-work-02.jpg" />
+                <img src="images/pic-work-02.jpg" alt="" />
               </div>
               <h3><a href="#">Web Development</a></h3>
             </article>
             <article>
               <div>
-                <img src="images/pic-work-03.jpg" />
+                <img src="images/pic-work-03.jpg" alt="" />
               </div>
               <h3><a href="#">Personal Brand</a></h3>
             </article>
@@ -102,7 +102,12 @@
           </header>
           <div>
             <div>
-              <img src="./images/pic-about-us.jpg" width="460" height="447" />
+              <img
+                src="./images/pic-about-us.jpg"
+                alt=""
+                width="460"
+                height="447"
+              />
             </div>
             <h3>Who are we</h3>
             <p>
@@ -138,7 +143,12 @@
           <div>
             <article>
               <div>
-                <img src="./images/pic-blog-01.jpg" width="305" height="205" />
+                <img
+                  src="./images/pic-blog-01.jpg"
+                  alt=""
+                  width="305"
+                  height="205"
+                />
               </div>
               <p>Career</p>
               <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -151,7 +161,12 @@
             </article>
             <article>
               <div>
-                <img src="./images/pic-blog-02.jpg" width="305" height="205" />
+                <img
+                  src="./images/pic-blog-02.jpg"
+                  alt=""
+                  width="305"
+                  height="205"
+                />
               </div>
               <p>Digital Life</p>
               <h3>
@@ -170,7 +185,12 @@
             </article>
             <article>
               <div>
-                <img src="./images/pic-blog-03.jpg" width="305" height="205" />
+                <img
+                  src="./images/pic-blog-03.jpg"
+                  alt=""
+                  width="305"
+                  height="205"
+                />
               </div>
               <p>Social</p>
               <h3><a href="#"> Bestiarum vero nullum iudicium puto. </a></h3>
